fixed overflow on mobile

--- a/style.css
+++ b/style.css
@@ -46,17 +46,22 @@ body {
     -webkit-font-smoothing: antialiased;
     line-height: 1.5;
     min-height: 100%;  
+    display: grid;
+    place-items: center;
+    background: black; 
+}
+ 
+.wrapper {
     width: 100%;
+    height: 100%;
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
     gap: 8rem;
-    background: black;
-    overflow: hidden;
 }
-  
 
 .btn-container {
     display: flex;
